    ---------------------------------------------------
This file should be used  to briefly summarize all major modifications 
introduced in the code and keeptrack of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

05-Aug-2014, Vladimir Ivanchenko        (phys-ctor-limiters-V10-00-03)
- G4NeurtonTrackingCut - register G4NeutronKiller in 
    G4HadronicProcessStore - improved log and process deleted at exit

05-Jul-2014, Andrea Dotti               (phys-ctor-limiters-V10-00-02)
- Fix (possible) data-race condition in G4NeutronTrackingCut in 
  calling G4MTcout (defect seen from DRD)
  
27-May-2014, Vladimir Ivanchenko        (phys-ctor-limiters-V10-00-01)
- G4StepLimiterPhysics - fixed minor memory leak reported by Coverity

29-Jan-2014, Gunter Folger              (phys-ctor-limiters-V10-00-00)
- Removed from photolepton_hadron/muon_nuclear from sources.cmake

30-Nov-2013, Alex Howard 	        (phys-ctor-limiters-V09-06-14)
- Fixed coverity errors (uninitialised variables)

22-Nov-2013, Alex Howard 	        (phys-ctor-limiters-V09-06-13)
- G4WeightWindowBiasing and G4ImportanceBiasing modified:
- Added guard so that AddProcess only occurs for multithreaded builds
- Makes the singlethreaded backward compatable/minimum interface change

22-Nov-2013, Alex Howard 	        (phys-ctor-limiters-V09-06-12)
- Added G4WeightWindowBiasing

21-Nov-2013, Alex Howard 	        (phys-ctor-limiters-V09-06-11)
- Added G4ImportanceBiasing

09-Nov-2013, Andrea Dotti 	        (phys-ctor-limiters-V09-06-10)
- Bug fix for gnumake builds: add processes/biasing/generic/include in
  list of includes.

08-Nov-2013, Marc Verderi               (phys-ctor-limiters-V09-06-09)
- add G4GenericBiasingPhysics.

07-Nov-2013, Alberto Ribon		(phys-ctor-limiters-V09-06-08)
- Removed low_energy and high_energy from sources.cmake and GNUmakefile.
